--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,3 +36,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Run Build
+        run: pnpm build
+
+      - name: Run Tests
+        run: pnpm test
