ci: add env.test to run tests with the correct environment

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 DATABASE_URL="my database url"
 NEXTAUTH_SECRET="my secret key"
+NEXTAUTH_URL="http://localhost:3000"
 GOOGLE_CLIENT_ID="my google client id"
 GOOGLE_CLIENT_SECRET="my google client secret"
 GITHUB_CLIENT_ID="my github client id"
