--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ on:
   - push
   - pull_request
 
+env:
+  NODE_ENV: test
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
 jobs:
   cache-and-install:
     runs-on: ubuntu-latest
@@ -36,3 +40,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Run Build
+        run: pnpm build
+
+      - name: Run Tests
+        run: pnpm test
